--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,18 +4,14 @@ html{
     overflow-x: hidden;
 }
 body{
-        display: flex;
-        flex-direction: column;
+        @include display-flex(column,none,none);
         min-height: 100%;
         max-width: 100%;
         overflow-x: hidden;
         header{
             background-color: #BFAE9D;
             min-width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
+            @include display-flex(row,center,center);
             list-style: none;
             .logo-header{
                 width: 10rem;
@@ -23,8 +19,7 @@ body{
             }
             .navbar{
                 width: auto;
-                display: flex;
-                flex-direction: row;
+                @include display-flex(row,none,none);
                 list-style: none;
                 gap: 1.875rem;
                 text-decoration: none;
@@ -38,7 +33,7 @@ nav{
             color: #FFF;
             text-align: center;
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            font-family: League Spartan;
+            font-family: $fuente-principal;
             font-size: 40px;
             font-style: normal;
             font-weight: 400;
