--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -1,9 +1,7 @@
 main{
     .section1-inicio{
         border-radius: 1px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include display-flex(none,center,center);
         border: .3125rem solid #5F4136;
         background-image: url("../assets/img/Fondo-cafe.png");
         background-repeat: no-repeat;
@@ -20,9 +18,7 @@ main{
     .section2-inicio{
         height: 37.5rem;
         margin-top: 1.875rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include display-flex(none,center,center);
         background-image: url("../assets/img/fondo.png");
         background-repeat: no-repeat;
         background-size: cover;
@@ -48,18 +44,14 @@ main{
         }
     }
     .section3-inicio{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include display-flex(none,center,center);
         div{
             img{
                 margin: 1.875rem ;
             }
         }
         .enlace{
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include display-flex(none,center,center);
             border-radius: 8rem;
             border: 5px solid #5F4136;
             box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
