--- a/scss/layout/_main-ingreso.scss
+++ b/scss/layout/_main-ingreso.scss
@@ -1,14 +1,8 @@
 .main-login{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    @include display-flex(column,space-evenly,center);
     gap: 3.125rem;
     .login {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        @include display-flex(column,center,center);
         gap: 1.25rem;
         margin: 3.125rem;
         width: 68.5rem;
@@ -24,26 +18,22 @@
             height: 3.0625rem;
             color: #FFF;
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            font-family: League Spartan;
+            font-family: $fuente-principal;
             font-size: 3.75rem;
             font-style: normal;
             font-weight: 700;
             line-height: normal;
+            text-decoration: none
         }
         div{
             form{
-                display: flex;
-                flex-direction: column;
+                @include display-flex(column,center,center);
                 gap: 1.25rem;
-                justify-content: center;
-                align-items: center;
                 margin-top: 2.5rem;
                 label{
                     width: 27.9375rem;
                     height: 3.0625rem;
-                    color: #FFF;
-                    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                    font-family: League Spartan;
+                    @extend h1;
                     font-size: 2.5rem;
                     font-style: normal;
                     font-weight: 700;
@@ -61,8 +51,7 @@
                         width: 16.25rem;
                         height: 4.8125rem;
                         color: #000000;
-                        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                        font-family: League Spartan;
+                        @extend h1;
                         font-size: 40px;
                         font-style: normal;
                         font-weight: 700;
@@ -74,9 +63,8 @@
                 }
             }
             h3{
-                color: #FFF;
-                text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                font-family: League Spartan;
+                @extend h1;
+                text-align: center;
                 font-size: 2.25rem;
                 font-style: normal;
                 font-weight: 700;
@@ -94,9 +82,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         margin: 3.125rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include display-flex(none,center,center);
         h2{
             a{
                 width: 30.875rem;
@@ -104,7 +90,7 @@
                 color: #ffffff;
                 text-align: center;
                 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                font-family: League Spartan;
+                font-family: $fuente-principal;
                 font-size: 2.25rem;
                 font-style: normal;
                 font-weight: 700;
