--- a/scss/layout/_main-nosotros.scss
+++ b/scss/layout/_main-nosotros.scss
@@ -1,9 +1,7 @@
 .main-nosotros{
     .titulo-nosotros{
         height: 9.9375rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include display-flex(row,center,center);
         width: 50%;
         border-radius: 3.125rem;
         border: 8px solid #000;
@@ -24,30 +22,28 @@
         }
     }
     .container-conocenos{
-        display: flex;
-        flex-direction: row ;
-        justify-content: space-between;
+        @include display-flex(row,space-between,center);
         .container-parrafo{
-            display: flex;
+            @include display-flex(row,center,center);
             width: 50%;
-            height: 37rem;
+            height: 50rem;
             border-radius: 3.125rem;
             border: 8px solid #000;
-            background: #8D8275;
+            background: $fondo-form;
             box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
             margin : 1.25rem;
-            align-items: center;
-            justify-content: center;
+            padding-bottom: .625rem;
             p{
                 width: 41.5625rem;
                 height: 32.375rem;
                 color: #FFF;
                 text-align: justify;
-                font-family: League Spartan;
-                font-size: 2.5rem;
+                font-family: $fuente-principal;
+                font-size: 2.1875rem;
                 font-style: normal;
                 font-weight: 700;
                 line-height: normal;
+
             }
             }
         }
@@ -55,27 +51,22 @@
             width: 100%;
         }
         .section2-nosotros{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
+            @include display-flex(row,space-around,none);
             div{
                 form{
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
+                    @include display-flex(column,center,center);
                     gap: 1.25rem;
                     width: 41.6875rem;
                     height: 37rem;
                     border-radius: 3.125rem;
                     border: 8px solid #000;
-                    background: #8D8275;
+                    background: $fondo-form;
                     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
                     margin: 1.25rem;
                     label{
                         color: #FFF;
                         text-align: center;
-                        font-family: League Spartan;
+                        font-family: $fuente-principal;
                         font-size: 2.5rem;
                         font-style: normal;
                         font-weight: 700;
@@ -96,15 +87,12 @@
             }
         }
         .opinion{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            @include display-flex(column,center,center);
             width: 100%;
             height: 26.8125rem;
             border-radius: 3.125rem;
             border: 8px solid #000;
-            background: #8D8275;
+            background: $fondo-form;
             box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
             margin: 1.25rem;
             .input-opinion{
@@ -122,7 +110,7 @@
             label{
                 color: #FFF;
                 text-align: center;
-                font-family: League Spartan;
+                font-family: $fuente-principal;
                 font-size: 2.5rem;
                 font-style: normal;
                 font-weight: 700;
