--- a/scss/layout/_main-tienda.scss
+++ b/scss/layout/_main-tienda.scss
@@ -6,9 +6,7 @@ main{
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 0 30%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
+        @include display-flex(row,center,flex-start);
         margin: 0 0 50px 0;
         h1{
             width: 55.375rem;
@@ -39,10 +37,7 @@ main{
         }
     }
     .tienda-principal{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        @include display-flex(column,space-between,center);
         gap: 3.125rem;
         .tienda{
             width: 90rem;
@@ -89,7 +84,7 @@ main{
                         h3{
                             color: #ffffff;
                             text-align: center;
-                            font-family: League Spartan;
+                            font-family: $fuente-principal;
                             font-size: 2rem;
                             font-style: normal;
                             font-weight: 700;
