--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -40,9 +40,7 @@ nav{
             line-height: normal;
             text-decoration: none;
             padding: 1.7569rem 0 1.6087rem 0;
-            &:hover{
-                color: #000;
-            }
+            @include hover(black);
         }
     }
 }
