--- a/scss/layout/_main-nosotros.scss
+++ b/scss/layout/_main-nosotros.scss
@@ -24,7 +24,7 @@
     .container-conocenos{
         @include display-flex(row,space-between,center);
         .container-parrafo{
-            @include display-flex(row,center,center);
+            @include display-flex(row,center,start);
             width: 50%;
             height: 50rem;
             border-radius: 3.125rem;
@@ -48,7 +48,7 @@
             }
         }
         .titulo-newsletter{
-            width: 100%;
+            width: 98%;
         }
         .section2-nosotros{
             @include display-flex(row,space-around,none);
@@ -88,7 +88,6 @@
         }
         .opinion{
             @include display-flex(column,center,center);
-            width: 100%;
             height: 26.8125rem;
             border-radius: 3.125rem;
             border: 8px solid #000;
