--- a/scss/layout/medias/_media-425.scss
+++ b/scss/layout/medias/_media-425.scss
@@ -2,75 +2,145 @@
 @media (max-width: 425px){
     header{
         flex-direction: column;
+        .navbar{
+            gap: .9375rem;
+            text-decoration: none;
+        }
+        nav li a{
+            font-size: 1.25rem;
+        }
+        nav img{
+            width: 1.25rem;
+            height: 1.25rem;
+        }
     }
-    .navbar{
-        gap: .9375rem;
-        text-decoration: none;
+    main{
+        .section1-inicio{
+            display: none;
+        }
+        .section2-inicio{
+            font-size: 5rem;
+        }
+        .section2-inicio span{
+            font-size: 7.5rem;
+        }
+        .section3-inicio{
+            flex-direction: column;
+        }
+        .section3-inicio div img{
+            width: 18.75rem;
+        }
+        .enlace{
+            width: auto;
+            height: auto;
+        }
+        .enlace h2{
+            height: auto;
+            font-size: 5rem;
+            text-align: center;
+        }
     }
-    nav li a{
-        font-size: 1.25rem;
+    .main-nosotros{
+        .titulo-nosotros {
+            width: 95%;
+            h2{
+                font-size: 3.125rem;
+            }
+        }
+        .container-conocenos{
+            width: 94%;
+            .container-parrafo{
+                height: 37.5rem;
+                align-items: center;
+                p{
+                    font-size: 1.25rem;
+                    margin: 1.25rem;
+                }
+            }
+        }
+        .section2-nosotros{
+            .imagen-newsletter{
+                display: none;
+            }
+            div{
+                form{
+                    width: 25rem;
+                    label{
+                        font-size: 1.5625rem;
+                    }
+                    .datos{
+                        width: 18.75rem;
+                    }
+                    .boton-enviar{
+                        width: 3.125rem;
+                        height: 3.125rem;
+                        margin: .3125rem;
+                    }
+                }
+            }
+        }
+        .opinion{
+            width: 92%;
+            label{
+                font-size: 1.5625rem;
+                margin: 1.5625rem;
+            }
+            .input-opinion{
+                height: 6.25rem;
+            }
+            .boton-enviar{
+                width: 3.125rem;
+                height: 3.125rem;
+                margin: 1.5625rem;
+            }
+        }
     }
-    nav img{
-        width: 1.25rem;
-        height: 1.25rem;
+    main{
+        .titulo-carrito{
+            h1{
+                font-size: 64px;
+                padding: .9375rem;
+            }
+        }
+        .carrito{
+            section{
+                ul{
+                    width: 25rem;
+                    li{
+                        flex-direction: column;
+                        margin: 2.5rem;
+                    }
+                }
+            }
+            .section2-carrito{
+                h2{
+                    width: 25rem
+                }
+                .resumen{
+                    width: 25rem;
+                }
+            }
+        }
     }
-    .section1-inicio{
-        display: none;
+    .main-login{
+        .login{
+            width: 25rem;
+            h1{
+                font-size: 2rem;
+            }
+            div{
+                form{
+                    input{
+                        width: 300px;
+                    }
+                }
+            }
+        }
+        .login-section2{
+            width: 25rem;
+            h2{
+                text-align: center;
+            }
+        }
     }
-    .section2-inicio{
-        font-size: 5rem;
-    }
-    .section2-inicio span{
-        font-size: 7.5rem;
-    }
-    .section3-inicio{
-        flex-direction: column;
-    }
-    .section3-inicio div img{
-        width: 18.75rem;
-    }
-    .enlace{
-        width: auto;
-        height: auto;
-    }
-    .enlace h2{
-        height: auto;
-        font-size: 5rem;
-        text-align: center;
-    }
-    .imagen-newsletter{
-        display: none;
-    }
-    .titulo-nosotros h2{
-        font-size: 3.125rem;
-    }
-    .container-parrafo{
-        width: 25rem;
-    }
-    .container-parrafo p{
-        font-size: 1.25rem;
-    }
-    .opinion{
-        width: 25rem;
-    }
-    .opinion label{
-        font-size: 2.1875rem;
-    }
-    .form-newsletter{
-        width: 25rem;
-        height: auto;
-        padding: 1.25rem;
-    }
-    .form-newsletter label{
-        font-size: 1.25rem;
-    }
-    .datos{
-        width: 18.75rem;
-    }
-    .boton-enviar{
-        width: 3.125rem;
-        height: 3.125rem;
-        margin: .3125rem;
-    }
-
 }
