--- a/scss/layout/medias/_media-768.scss
+++ b/scss/layout/medias/_media-768.scss
@@ -2,31 +2,62 @@
 @media (max-width: 768px){
     header{
         flex-direction: column;
+        .navbar{
+            gap: 2.5rem;
+            text-decoration: none;
+        }
+        nav li a{
+            font-size: 1.5625rem;
+        }
+        nav img{
+            width: 1.5625rem;
+            height: 1.5625rem;
+        }
     }
-    .navbar{
-        gap: .625rem;
-        text-decoration: none;
+
+    .main-nosotros {
+        .titulo-nosotros {
+            width: 98%;
+        }
+        .container-conocenos{
+            .container-parrafo{
+                height: 56.25rem;
+                width: 98%;
+                align-items: center;
+                p{
+                    font-size: 2rem;
+                    margin: 1.25rem;
+                }
+            }
+        }
     }
-    nav li a{
-        font-size: 1.5625rem;
+    main{
+        .section1-inicio{
+            display: none;
+        }
+        .section3-inicio{
+            flex-direction: column;
+        }
+        .imagen-conocenos{
+            display: none;
+        }
+        .titulo-nosotros{
+            width: 100%;
+        }
     }
-    nav img{
-        width: 1.5625rem;
-        height: 1.5625rem;
-    }
-    .section1-inicio{
-        display: none;
-    }
-    .section3-inicio{
-        flex-direction: column;
-    }
-    .imagen-conocenos{
-        display: none;
-    }
-    .titulo-nosotros{
-        width: 100%;
-    }
-    .container-parrafo{
-        width: 100%;
+    .main-login{
+        .login{
+            width: 600px;
+            h1{
+                width: auto;
+            }
+            div{
+                form{
+                    input{
+                        width: 25rem;
+                    }
+                }
+            }
+        }
     }
 }
