--- a/scss/layout/_main-tienda.scss
+++ b/scss/layout/_main-tienda.scss
@@ -44,7 +44,7 @@ main{
         @include display-flex(column,space-between,center);
         gap: 3.125rem;
         .tienda{
-            width: 90rem;
+            width: 98%;
             height: auto;
             border-radius: 8.5rem;
             border: 5px solid #020202;
