--- a/scss/layout/_main-nosotros.scss
+++ b/scss/layout/_main-nosotros.scss
@@ -1,4 +1,25 @@
 .main-nosotros{
+    .principal-nosotros{
+        width: 98%;
+        height: 12rem;
+        @include display-flex(row,center,center);
+        border-radius: 3.125rem;
+        border: 8px solid #000;
+        background: #8D8175;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        margin: .625rem;
+        h1{
+            width: 37.25rem;
+            height: 4.5625rem;
+            color: #ffffff;
+            text-align: center;
+            font-family: Sifonn;
+            font-size: 7rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+        }
+    }
     .titulo-nosotros{
         height: 9.9375rem;
         @include display-flex(row,center,center);
