--- a/scss/layout/medias/_media-1024.scss
+++ b/scss/layout/medias/_media-1024.scss
@@ -46,4 +46,13 @@
             flex-direction: column;
         }
     }
+    main{
+        .tienda-principal{
+            .tienda{
+                h2{
+                    margin: 3.125rem 0 0 6.25rem;
+                }
+            }
+        }
+    }
 }
