--- a/scss/layout/medias/_media-425.scss
+++ b/scss/layout/medias/_media-425.scss
@@ -143,4 +143,50 @@
             }
         }
     }
+    main{
+        .titulo{
+            height: 12.5rem ;
+            h1{
+                margin-top: 0;
+                font-size: 3rem;
+                span{
+                    letter-spacing: 0;
+                    line-height: 0;
+                    font-size: 4rem;
+                }
+            }
+        }
+        .tienda-principal{
+            .tienda{
+                margin-bottom: 1.25rem;
+                h2{
+                    height: 6.25rem;
+                    font-size: 2rem;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                }
+                ul{
+                    li{
+                        div{
+                            .tam-img{
+                                width: 6.25rem;
+                                height: 6.25rem;
+                            }
+                            h3{
+                                font-size: 1rem;
+                            }
+                            button{
+                                width: 6.25rem;
+                                height: 3.125rem;
+                                img{
+                                    width: 2.1875rem;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
