--- a/scss/layout/medias/_media-768.scss
+++ b/scss/layout/medias/_media-768.scss
@@ -60,4 +60,19 @@
             }
         }
     }
+    main{
+        .titulo{
+            h1{
+                font-size: 6rem;
+            }
+        }
+        .tienda-principal{
+            .tienda{
+                h2{
+                    margin: 3.125rem 0 0 6.25rem;
+                    font-size: 5rem;
+                }
+            }
+        }
+    }
 }
